--- a/branches/0.3.5/fconfigtoolbar.lfm
+++ b/branches/0.3.5/fconfigtoolbar.lfm
@@ -7,13 +7,14 @@ object frmConfigToolBar: TfrmConfigToolBar
   HorzScrollBar.Page = 595
   VertScrollBar.Page = 280
   ActiveControl = btnOpenBarFile
-  AutoSize = True
   BorderIcons = [biSystemMenu]
   BorderStyle = bsDialog
   Caption = 'Change button bar'
   ChildSizing.TopBottomSpacing = 8
-  ClientHeight = 281
-  ClientWidth = 596
+  ClientHeight = 285
+  ClientWidth = 605
+  Constraints.MaxHeight = 285
+  Constraints.MaxWidth = 605
   Font.Color = clBtnText
   Font.Height = -11
   Font.Name = 'MS Sans Serif'
