--- a/branches/0.4.5/src/fmain.lfm
+++ b/branches/0.4.5/src/fmain.lfm
@@ -1688,6 +1688,16 @@ object frmMain: TfrmMain
       Caption = 'Drive context menu'
       OnExecute = actExecute
     end
+    object actCopyNoAsk: TAction
+      Category = 'Command'
+      Caption = 'Copy files without asking for confirmation'
+      OnExecute = actExecute
+    end
+    object actRenameNoAsk: TAction
+      Category = 'Commands'
+      Caption = 'Move/Rename files without asking for confirmation'
+      OnExecute = actExecute
+    end
   end
   object pmHotList: TPopupMenu
     left = 152
