--- a/branches/0.4.5/src/foptions.lfm
+++ b/branches/0.4.5/src/foptions.lfm
@@ -3095,6 +3095,7 @@ object frmOptions: TfrmOptions
   object dlgFnt: TFontDialog
     MinFontSize = 0
     MaxFontSize = 0
+    Options = [fdNoStyleSel]
     left = 48
     top = 368
   end
