FIX: Incorrect item index when remove item
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2078 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/src/ffileassoc.lfm
+++ b/branches/0.4.5/src/ffileassoc.lfm
@@ -1,7 +1,7 @@
 object frmFileAssoc: TfrmFileAssoc
   Left = 298
   Height = 345
-  Top = 126
+  Top = 189
   Width = 554
   ActiveControl = btnAddExt
   Caption = 'File associations'
@@ -111,6 +111,7 @@ object frmFileAssoc: TfrmFileAssoc
       Top = 6
       Width = 145
       ItemHeight = 0
+      OnSelectionChange = lbExtsSelectionChange
       TabOrder = 0
       TabStop = False
       TopIndex = -1
