UPD: Use "Also &pack path names (only recursed)" by default
git-svn-id: http://svn.code.sf.net/p/doublecmd/code@2226 10bb5c37-c6d6-4c74-9a2a-30fc9b6e22f7

--- a/branches/0.4.5/src/fpackdlg.lfm
+++ b/branches/0.4.5/src/fpackdlg.lfm
@@ -17,7 +17,7 @@ object frmPackDlg: TfrmPackDlg
   Constraints.MinWidth = 482
   OnShow = FormShow
   Position = poScreenCenter
-  LCLVersion = '0.9.29'
+  LCLVersion = '0.9.28.3'
   object lblPrompt: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
@@ -90,7 +90,6 @@ object frmPackDlg: TfrmPackDlg
     NumGlyphs = 1
     Anchors = [akTop, akLeft, akRight]
     AutoSize = False
-    MaxLength = 0
     TabOrder = 0
   end
   object rgPacker: TRadioGroup
@@ -203,6 +202,8 @@ object frmPackDlg: TfrmPackDlg
       Top = 0
       Width = 260
       Caption = 'Also &pack path names (only recursed)'
+      Checked = True
+      State = cbChecked
       TabOrder = 0
     end
     object cbRecurse: TCheckBox
