--- a/branches/0.5/src/fviewer.lfm
+++ b/branches/0.5/src/fviewer.lfm
@@ -113,6 +113,8 @@ object frmViewer: TfrmViewer
       OnPositionChanged = ViewerPositionChanged
       OnMouseUp = ViewerControlMouseUp
       Align = alClient
+      Color = clWindow
+      Font.Color = clWindowText
     end
   end
   object pnlImage: TPanel
