--- a/branches/0.5/src/foptions.lfm
+++ b/branches/0.5/src/foptions.lfm
@@ -7,12 +7,13 @@ object frmOptions: TfrmOptions
   Caption = 'Options'
   ClientHeight = 557
   ClientWidth = 886
+  OnClose = FormClose
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
   Position = poScreenCenter
   SessionProperties = 'Height;Width;WindowState;Left;Top'
-  ShowInTaskBar = stNever
+  ShowInTaskBar = stAlways
   LCLVersion = '0.9.29'
   object Panel1: TPanel
     Left = 0
@@ -54,6 +55,7 @@ object frmOptions: TfrmOptions
       Kind = bkCancel
       ModalResult = 2
       NumGlyphs = 0
+      OnClick = btnCancelClick
       TabOrder = 1
     end
     object btnApply: TBitBtn
